--- a/Site/app/styles/stylesheets/_bootstrap.scss
+++ b/Site/app/styles/stylesheets/_bootstrap.scss
@@ -23,8 +23,8 @@
 //@import "bootstrap/input-groups";
 @import "bootstrap/navs";
 @import "bootstrap/navbar";
-//@import "bootstrap/breadcrumbs";
-//@import "bootstrap/pagination";
+@import "bootstrap/breadcrumbs";
+@import "bootstrap/pagination";
 //@import "bootstrap/pager";
 //@import "bootstrap/labels";
 //@import "bootstrap/badges";
