--- a/Site/app/styles/main.scss
+++ b/Site/app/styles/main.scss
@@ -51,13 +51,6 @@ body {
     border: 0px;
 }
 
-.slide,
-.section {
-    text-align: center;
-    background-color: white;
-    padding-top: 10px;
-}
-
 .quote {
     background-color: $secondary-color;
     color: white;
@@ -75,22 +68,6 @@ body {
     font-size: 20px;
 }
 
-.cd-top {
-    z-index: 999;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    margin: 50px;
-}
-
-.cd-top.cd-is-visible {
-    visibility: visible;
-    opacity: 1;
-}
-
-.cd-top.cd-fade-out {
-    opacity: .5;
-}
 
 .thumbnail {
     position: relative;
@@ -134,7 +111,11 @@ body {
 }
 
 .section {
-    position: relative;
+    //position: relative;
+    text-align: center;
+    background-color: white;
+    padding-top: 10px;
+    //margin-top: 120px;
     footer {
         //        position: absolute;
         bottom: 0;
@@ -225,8 +206,4 @@ td {
 
 .navbar-custom {
     height: 120px;
-}
-
-.about-us {
-    height: 500px;
 }
