--- a/NodeServer/templates/views/index.hbs
+++ b/NodeServer/templates/views/index.hbs
@@ -1,21 +1,24 @@
 {{!< default}}
-<div class="container">
-	<div class="jumbotron"><img src="/images/logo.svg" width="160">
-		<h1>Welcome</h1>
-		<p>This is your new <a href='http://keystonejs.com', target='_blank'>KeystoneJS</a> website.</p>
-		<p>
-			It includes the latest versions of
-			<a href='http://getbootstrap.com/' target='_blank'>Bootstrap</a>
-			and <a href='http://www.jquery.com/' target='_blank'>jQuery</a>.
-		</p>
-		<p>Visit the <a href='http://keystonejs.com/guide' target='_blank'>Getting Started</a> guide to learn how to customise it.</p>
-		<hr>
-		<p>We have created a default Admin user for you with the email <strong>user@keystonejs.com</strong> and the password <strong>admin</strong>.</p>
-		<p><a href="/keystone/signin" style="margin-right: 10px" class="btn btn-lg btn-primary">Sign in</a> to use the Admin UI.</p>
-		<hr>
-		<p>
-			Remember to <a href='https://github.com/keystonejs/keystone' target='_blank'>Star KeystoneJS on GitHub</a> and
-			<a href='https://twitter.com/keystonejs' target='_blank'>follow @keystonejs</a> on twitter for updates.
-		</p>
-	</div>
+
+	<div class="jumbotron">
+
+<div class="row">
+      <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+          <p>
+          <img style="margin-left: 10px; width: 700px; height: 415px;" src="images/a.jpeg">
+          </p>
+
 </div>
+
+          <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+
+  <p><a class="btn btn-large btn-info" href="try.html" style="width: 290px; height: 70px;">Cancer Care</a></p>
+          <p><a class="btn btn-large btn-info" href="try.html" style="width: 290px; height: 70px;">Bones & Joints</a></p>
+          <p><a class="btn btn-large btn-info" href="try.html" style="width: 290px; height: 70px;">Cosmetics Treatment</a></p>
+          <p><a class="btn btn-large btn-info" href="try.html" style="width: 290px; height: 70px;">IVF & Reproductive Medicine</a></p>
+          <p><a class="btn btn-large btn-info" href="try.html" style="width: 290px; height: 70px;">Ayurveda & Wellness</a></p>
+          </div>
+          </div>
+		
+	</div>
+
