--- a/NodeServer/templates/views/layouts/default.hbs
+++ b/NodeServer/templates/views/layouts/default.hbs
@@ -31,21 +31,31 @@
 								<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
 							<a href="/" class="navbar-brand">MedicalTravel</a>
+
+
+
 						</div>
 						<div class="collapse navbar-collapse">
-							<ul class="nav navbar-nav navbar-left">
-									{{# each navLinks}}
+                                                       <ul class="nav navbar-nav navbar-left">
+								{{# each navLinks}}
+
 									<li {{#ifeq ../section key}}class="active"{{else}}{{/ifeq}}>
 										<a href="{{ href }}">{{ label }}</a>
 									</li>
 								{{/each}}
 							</ul>
+							
 							<ul class="nav navbar-nav navbar-right">
-								{{#if user}}
-								<li><a href="/keystone/signout">Sign Out</a></li>
+
+ <li class="active"><a href="#" style="margin-top: 5px;">services</a></li>
+          <li><a href="#" style="margin-top: 5px;">partners</a></li>
+          <li><a href="#" style="margin-top: 5px;">Connect with us</a></li>
+{{#if user}}
+								<li><a href="/keystone/signout">Sign out</a></li>
 								{{else}}
-								<li><a href="/keystone/signin">Sign In</a></li>
+								<li><a href="/keystone/signin">Sign in</a></li>
 								{{/if}}
+								
 							</ul>
 						</div>
 					</div>
@@ -84,11 +94,27 @@
 			<!-- The content block should contain the body of your template's content-->
 			{{{body}}}
 		</div>
-		<div class="container">
+		
 			<div id="footer">
-				<p>Powered by <a href="http://keystonejs.com" target="_blank">KeystoneJS</a>.</p>
+
+                          <div class="row">
+        <div class="col-md-3">
+            <p style="padding-left: 10px; margin-top: 10px;" > countries|provinces/regions|cities</p>
+            <p style="padding-left: 10px;">
+            <span class="glyphicon glyphicon-copyright-mark"></span>2013 Inspirock - All rights reserved.</p>
+        </div>
+        <div class="col-md-3"></div>
+        <div class="col-md-3"></div>
+        <div class="col-md-3">
+
+             <span style="text-align:right;"><i class="fa fa-facebook" href="http://www.facebook.com" style="padding-left: 10px; padding-right: 10px; width: 10px; height: 20px;margin-top:10px;"></i></span>
+              <span style="text-align:right;"><i class="fa fa-twitter" style="padding-left: 10px; padding-right: 10px; width: 10px; height: 20px; margin-top:10px;"></i></span>
+              <span style="text-align:right;"><i class="fa fa-google-plus" style="padding-left: 10px; padding-right: 10px; width: 10px; height: 20px;margin-top:10px;"></i></span>
+        </div>
+        </div>
+				
 			</div>
-		</div>
+		
 		{{!--
 			//- jQuery 1.11.1 is included by default, and required by both Bootstrap
 			//- and the KeystoneJS Content Editor. If you are not targeting IE8,
