--- a/Gmt/public/styles/site.scss
+++ b/Gmt/public/styles/site.scss
@@ -20,3 +20,10 @@
 
 // Add your own site style includes here
 @import "site/layout";
+.circle{
+  // background-repeat: no-repeat;
+
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+}
