--- a/Gmt/public/styles/site.scss
+++ b/Gmt/public/styles/site.scss
@@ -1,8 +1,6 @@
 // Bootstrap
 // =========
-
 // Bootstrap can be removed entirely by deleting this line.
-
 @import "bootstrap/bootstrap";
 
 // The easiest way to customise Bootstrap variables while
@@ -11,19 +9,116 @@
 //
 // You can also add your own custom variables to this file for
 // use in your site stylesheets.
-
 @import "site/variables";
-
 
 // Site Styles
 // ===========
-
 // Add your own site style includes here
 @import "site/layout";
-.circle{
-  // background-repeat: no-repeat;
+.circle {
+     // background-repeat: no-repeat;
+       border-radius: 50%;
+				width: 120px;
+				height:120px;
+			}
+.provider-box {
+				border: 1px solid black;
+				width: 830px;
+        margin-bottom: 20px;
+}
+.provider-img{
+  padding: 20px;
+   width: 250px;
+    height: 225px;
+}
+.pills {
+  margin-left: -48px;
+  li{
+    margin-right: 20px;
+    margin-top: 15px;
+    width:250px;
+    height:50px;
+    padding-top:10px;
+    font-size:18px;
+    
+  }
+}
+.tabs{
+	margin-right: 20px;
+	margin-top: 15px;
+	width:250px;
+	height:50px;
+	padding-top:10px;
+	font-size:18px;
+  li{
+    margin-bottom: 20px;
 
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
+  }
+}
+.treatment{
+	margin-left: 15px;
+	img{
+		width: 800px;
+		height: 350px;
+		margin-left: -28px;
+		margin-top: 15px;
+	}
+}
+.treatment-box{
+margin-left: -45px;
+margin-top: 20px;
+
+h3{
+	font-size:16px;
+	background-color:#e5e5e5;
+	padding-top:12px;
+	padding-bottom:12px;
+	text-align:left;
+	padding-left:10px
+	}
+	img{
+		height: 180px;
+		width: 280px;
+	}
+
+}
+.treat{
+	margin-top: 45px;
+	border-bottom:2px solid #e5e5e5;
+	 padding-bottom: 40px;
+	  margin-left:-45px;
+		width:843px;
+	// padding-top: 50px;
+	// border-bottom:2px solid #e5e5e5;
+	// padding-bottom: 30px;
+	// margin-left:-45px;
+	// width:843px;
+
+	img{
+		width:120px;
+		height:120px;
+		border-radius:50%;
+		margin-top: -10px;
+
+	}
+}
+.treatment-doc{
+	margin-top: -20px;
+	h3{
+		padding-left: 8px;
+		margin-left: -10px;
+	}
+}
+.proc{
+	margin-top:45px;
+	margin-left:-45px;
+	border-bottom: 2px solid #e5e5e5;
+	width:843px;
+	button{
+		background-color:#e5e5e5;
+		width:150px;
+		height:50px;
+		margin-bottom: 20px;
+
+	}
 }
