--- a/Gmt/templates/views/doctor.hbs
+++ b/Gmt/templates/views/doctor.hbs
@@ -1,90 +1,97 @@
 <div class="container">
 
 
-	<div class="row treatment">
-		<div class="col-lg-9" style="border-right:2px solid #e5e5e5">
-			<img src="images/hosp3.png">
+	  <div class="row treatment">
+		<div class="col-lg-9" style="border-right:2px solid #e5e5e5;">
 
-			<div class="scrolls" data-spy="scroll" data-target="#navbar-example" style="margin-top: 4px;margin-left:20px">
-
-				<div id="navbar-example">
-					<ul class="nav nav-pills nav-justified pills" role="tablist" >
-						{{#each doctor_nav}}
-							<li class="active"><a href="#about">{{name}}</a></li>
-						{{/each}}
-					</ul>
-				</div>
-
-
-				<h4 id="about"></h4>
-				<p style="font-size: 16px; margin-top: 45px; border-bottom: 2px solid #e5e5e5; padding-bottom: 40px; margin-left: -40px;">
-					Manipal Hospital, Goa is one of the largest private hospitals in the state, offering the highest number of specialities, having the highest number of full time doctors and provide 24/7 services of Pharmacy, Laboratory, Paediatric and Neonatal emergency.
-					It has 6 world class operation theatres and is a 235 bed facility. It also has the highest standards of clinical expertise, nursing care and state-of-the-art hospital facilities. We provide rapid assessment, intervention and treatment for numerous
-					common and complex conditions. We provide customized and individual care to every patient.</p>
-
-
-				<h4 id="doctors" style="margin-left:-32px">Doctors</h4>
-				<div class="row treat">
-					<div class="col-lg-3 ">
-						<img class="circle" src="images/logo.png">
-					</div>
-
-					{{#each treatment_doctors}}
-						<div class="col-lg-6  treatment-doc">
-							<h3>{{name}}</h3>
-							<p>{{desc}}</p>
-							<p>{{speciality}}</p>
-						</div>
-					{{/each}}
-
-					<div class="col-lg-3">
-						<button type="button" class="btn btn-default">Verified</button>
-					</div>
-				</div>
-
-				<h4 id="procedures" style="margin-left:-32px">Procedures</h4>
-				<div class="row proc">
-					{{#each doctor_pro}}
-						<div class="col-lg-4">
-							<button type="button" class="btn btn-default">{{name}}</button>
-						</div>
-					{{/each}}
-				</div>
-			</div>
+		<div class="row doc" style="height:350px">
+		<div class="col-lg-4 ">
+		<img  src="images/logo.png" style="margin-left:50px">
 		</div>
 
+		 <div class="col-lg-4">
+			 {{#each doctors}}
+			 <h3>{{name}}</h3>
+       <p style="font-size: 18px;">{{description}}</p>
+			 <p style="font-size: 18px;">{{data}}</p>
+       {{/each}}
+		 </div>
+
+		 <div class="col-lg-4">
+		 <button class="btn btn-default" style="margin-top: 60px; margin-left: 30px;" type="button">Verified</button>
+		 </div>
+		 </div>
+
+		 <div class="scrolls" data-spy="scroll" data-target="#navbar-example" style="margin-top: 4px;margin-left:20px">
+
+		 <div id="navbar-example">
+		 <ul class="nav nav-pills nav-justified pills" role="tablist">
+		 {{#each doctor_nav}}
+		 <li class="active"><a href="#bio">{{name}}</a></li>
+		 {{/each}}
+		 </ul>
+		 </div>
+
+
+	<h4 id="bio" ></h4>
+	<p style="font-size: 16px; margin-top: 45px; border-bottom: 2px solid #e5e5e5; padding-bottom: 40px; margin-left: -40px;">
+	 {{{provider.description}}}
+	</p>
+
+	 <h4 id="education" style="margin-left: -32px;">Education</h4>
+	 <h3 style="margin-left: -30px;font-size:18px;">{{education.description}}</h3>
+	 <p style="margin-left: -30px;">{{education.data}}</p>
+	 <p style="margin-left: -30px;border-bottom:2px solid #e5e5e5;">2004</p>
+
+
+  <h4 id="awards" style="margin-left:-32px;border-bottom:2px solid #e5e5e5;">Awards</h4>
+
+
+	<h4 id="reviews" style="margin-left:-32px;">Reviews</h4>
+	<span class="glyphicon glyphicon-star" style="margin-left:-30px"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span>
+	<p  style="margin-left: -30px;"  style="margin-left: -30px;">Lorem Ipsum,</p>
+	<p  style="margin-left: -30px;">dolor ahajfnnsnsAMnkjndj janangfgbdbd</p>
+	<p  style="margin-left: -30px;">jjjajjaa ahnf go away somehwhere, best care and</p>
+	<p style="margin-left: -30px;" >help all over.</p>
+	<button type="submit" class="btn btn-default" style="margin-left:-30px; ">Write a review</button>
+ </div>
+ </div>
+
+
 		<div class="col-lg-3">
-			<h3 style="background-color:#e5e5e5;font-size:18px;width: 320px;height:40px; margin-left: -10px;padding-top:12px;text-align:left;padding-left:10px">Manipal Hospital,Goa</h3>
-			<br>
-			<br>
+		{{#each treatments}}
+		<h3 style="background-color:#e5e5e5;font-size:18px;width: 320px;height:40px; margin-left: -10px;padding-top:12px;text-align:left;padding-left:10px">{{name}}</h3>
+		{{/each}}
+		<br><br>
 
 			<form>
-				<div class="form-group">
-					<input type="name" class="form-control" id="name" placeholder="Name:" style="width: 300px; height: 45px;">
-				</div>
-				<div class="form-group">
-					<input type="email" class="form-control" id="email" placeholder="Email:" style="width: 300px; height: 45px;">
-				</div>
-				<div class="form-group">
-					<input type="phone" class="form-control" id="phone" placeholder="Phone(Optional)" style="width: 300px; height: 45px;">
-				</div>
-				<div class="form-group">
-			  <!-- <div class="dropdown">
-  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    Treatment
-    <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    <li><a href="#">A</a></li>
-    <li><a href="#">B</a></li>
-    <li><a href="#">C</a></li>
+			<div class="form-group">
+			<input type="name" class="form-control" id="name" placeholder="Name:" style="width: 300px; height: 45px;">
+			</div>
+			<div class="form-group">
+			<input type="email" class="form-control" id="email" placeholder="Email:" style="width: 300px; height: 45px;">
+			</div>
+			<div class="form-group">
+			<input type="phone" class="form-control" id="phone" placeholder="Phone(Optional)" style="width: 300px; height: 45px;">
+			</div>
+			<div class="form-group">
+			  <div class="dropdown">
+        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+         Treatment
+        <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1" >
+        <li><a href="#">A</a></li>
+        <li><a href="#">B</a></li>
+        <li><a href="#">C</a></li>
+        </ul>
+        </div>
+		   	</div>
+				<br>
 
-  </ul>
-</div> -->
-					<input type="treatment" class="form-control" id="treatment" placeholder="Treatment" style="width: 300px; height: 45px;">
-				</div>
-				<div class="form-group">
-					<textarea class="form-control" rows="5" placeholder="Questions/Comments" style="width: 300px;"></textarea>
+			<div class="form-group">
+			<textarea class="form-control" rows="5" placeholder="Questions/Comments" style="width: 300px;"></textarea>
+		  </div>
 			</form>
 			<!-- <p><span class="glyphicon glyphicon-phone"></span>0832 271 4370</p>
 <p style="margin-left:15px">0832 274 4376</p>
