--- a/Gmt/public/styles/site.scss
+++ b/Gmt/public/styles/site.scss
@@ -40,9 +40,10 @@
     height:50px;
     padding-top:10px;
     font-size:18px;
-    
+
   }
 }
+
 .tabs{
 	margin-right: 20px;
 	margin-top: 15px;
@@ -88,19 +89,12 @@ h3{
 	 padding-bottom: 40px;
 	  margin-left:-45px;
 		width:843px;
-	// padding-top: 50px;
-	// border-bottom:2px solid #e5e5e5;
-	// padding-bottom: 30px;
-	// margin-left:-45px;
-	// width:843px;
-
 	img{
 		width:120px;
 		height:120px;
 		border-radius:50%;
 		margin-top: -10px;
-
-	}
+}
 }
 .treatment-doc{
 	margin-top: -20px;
@@ -108,6 +102,19 @@ h3{
 		padding-left: 8px;
 		margin-left: -10px;
 	}
+}
+.doc{
+  margin-top: 45px;
+	border-bottom:2px solid #e5e5e5;
+	 padding-bottom: 40px;
+	  margin-left:-45px;
+		width:843px;
+  img{
+    width:180px;
+		height:180px;
+		border-radius:50%;
+		margin-top: -10px;
+  }
 }
 .proc{
 	margin-top:45px;
@@ -121,4 +128,9 @@ h3{
 		margin-bottom: 20px;
 
 	}
+}
+.post_img{
+  height:auto;
+  width:50%;
+  margin:0 auto;
 }
